--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <div class="riga">
         <div class="colonna prima">
-           <img  id="immagine" src="C:\Users\HUAWEI\Desktop\Nuova cartella\Nuova cartella\IMMAGINI\20221102115634.jpg" alt="">
+           <img  id="immagine" src="sitopersonale/index.html/20221102115634.jpg" alt="">
           </div>
         <div class="colonna seconda">
         <ul>
@@ -51,7 +51,7 @@
         <p class="sport"> <b>MUSICA</b> </p>
         </div>
 
-        <audio class="audio" controls src="C:\Users\HUAWEI\Desktop\Nuova cartella\Nuova cartella\IMMAGINI\file_example_MP3_5MG.mp3">
+        <audio class="audio" controls src="sitopersonale/index.html\file_example_MP3_5MG.mp3">
 
 
 
